# TableTheory

./: .gitignore  .golangci-v2.yml  .release-please-manifest.premain.json  AGENTS.md  AI_FRIENDLY_DOCUMENTATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  lambda.go  lambda_cov4_test.go  lambda_test.go  multiaccount.go  multiaccount_cov6_test.go  query_support.go  release-please-config.json  release-please-config.premain.json  tabletheory.go  theorydb.go  theorydb_cov4_test.go  theorydb_cov5_test.go  theorydb_cov6_delete_table_test.go  theorydb_cov6_key_map_test.go  theorydb_cov7_context_helpers_test.go  theorydb_cov7_count_result_test.go  theorydb_cov7_unmarshal_test.go  theorydb_encryption_tag_injection_test.go  theorydb_encryption_tag_read_test.go  theorydb_stream_test.go  theorydb_test.go  transaction_conditions.go
py/: README.md  pyproject.toml
py/docs/: README.md  _concepts.yaml  _decisions.yaml  _patterns.yaml  api-reference.md  core-patterns.md  development-guidelines.md  getting-started.md  migration-guide.md  testing-guide.md  troubleshooting.md
py/examples/: lambda_stream_handler.py  local_crud.py
py/src/theorydb_py/: __init__.py  aggregates.py  aws_errors.py  dms.py  encryption.py  errors.py  lease.py  mocks.py  model.py  multiaccount.py  optimizer.py  protection.py  query.py  runtime.py  schema.py  streams.py  table.py  testkit.py  transaction.py  update_builder.py  validation.py  version.json
py/tests/integration/: test_dynamodb_local_smoke.py  test_lease.py  (+4 more)
(+625 files in other folders)
