[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabletheory-py"
description = "TableTheory Python implementation for DynamoDB"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]
dependencies = [
    "boto3>=1.42.30",
    "cryptography>=46.0.3",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
  "boto3-stubs[dynamodb]>=1.42.30",
  "build>=1.2.2",
  "mypy>=1.14.0",
  "pip-audit>=2.8.0",
  "pytest>=8.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.9.0",
  "types-PyYAML",
]

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
theorydb_py = ["py.typed", "version.json"]

[tool.setuptools.dynamic]
version = { attr = "theorydb_py.__version__" }

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.mypy-boto3]
ignore_missing_imports = true

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
